--- a/components/gallery/gallery.css
+++ b/components/gallery/gallery.css
@@ -1,9 +1,18 @@
 #image-grid {
+    margin: 0 auto;
+    margin-right: 8em;
+    margin-left: 8em;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    gap: 1em;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 1.5em;
 }
 
 .photo {
-    border: 1px;
+    border-radius: 8px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: auto;
 }
