--- a/components/nav/nav.css
+++ b/components/nav/nav.css
@@ -1,59 +1,79 @@
 #navbar {
-    width: 100vw;
-    height: 10vh;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
+  width: 100vw;
+  height: 10vh;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
   }
 
 #navbar > ul {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    list-style: none;
-    padding: 2em;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  list-style: none;
+  padding: 2em;
   }
 
 .logo {
-    object-fit: contain;
-    height: 3vh;
-  }
-
-  button {
-    width: 6em;
-    height: 3vh;
-    object-fit: contain;
-    cursor: pointer;
-    background: none;
-    border: none;
+  object-fit: contain;
+  height: 3vh;
 }
 
-.clicked {
-    color: white;
-    background-color: black;
-    border-radius: 10px;
+button {
+  width: 6em;
+  height: 3vh;
+  object-fit: contain;
+  cursor: pointer;
+  background: none;
+  border: none;
 }
 
-.button-logo {
-    height: 3vh;
-    object-fit: contain;
-    max-width: 100%;
-    max-height: 100%;
+.icons {
+  display: flex;
+  flex-direction: row;
+}
+
+.button-icon {
+  height: 3vh;
+  object-fit: contain;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .select-button {
+  font-family: 'Roboto';
   font-size: 0.9rem;
   font-weight: 675;
 }
 
+#search-form {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+}
+
 #search {
-    width: 75vw;
-    height: 2rem;
-    border-radius: 10px;
-    border: none;
-    background-color: rgba(128, 128, 128, 0.199);
+  flex-basis: 99%;
+  flex-shrink: 10;
+  width: 75vw;
+  height: 2rem;
+  border-radius: 10px;
+  border: none;
+  background-color: rgba(128, 128, 128, 0.199);
   }
 
+.search-button {
+  display: none;
+}  
+
 @media (max-width: 770px) {
-    /*TODO*/
+    
+  #search {
+    display: none;
+  }
+
+  .search-button {
+    display: block;
+  }
+
   }
