with better responsive

--- a/components/gallery/gallery.css
+++ b/components/gallery/gallery.css
@@ -43,7 +43,8 @@
 @media (max-width: 400px) {
 
     #image-grid {
-        margin: 0 auto;
+        margin-right: -3em;
+      
     }
 
     .photo {
