--- a/components/gallery/gallery.css
+++ b/components/gallery/gallery.css
@@ -1,10 +1,10 @@
 #image-grid {
-    margin: 0 auto;
-    margin-right: 8em;
-    margin-left: 8em;
+    width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 1.5em;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    justify-content: center;
+    grid-gap: 1.5rem;
+    background-color: green;
 }
 
 .photo {
@@ -14,6 +14,8 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    align-content: center;
+    justify-items: center;
     height: auto;
     transition: transform 0.3s ease, opacity 0.3s ease;
 }
@@ -42,12 +44,7 @@
 
 @media (max-width: 400px) {
 
-    #image-grid {
-        margin-right: -3em;
-      
-    }
-
     .photo {
-        width: 50vw;
+        width: 100%;
     }
   }
