--- a/components/nav/nav.css
+++ b/components/nav/nav.css
@@ -1,17 +1,38 @@
 #navbar {
-  width: 100vw;
+  width: 100%;
   height: 10vh;
   display: flex;
   justify-content: space-around;
   flex-direction: row;
   }
 
-#navbar > ul {
+ul {
+  width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
   list-style: none;
   padding: 2em;
+  }
+
+.search-container {
+  width: 100%;
+}  
+
+#search-form {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+}
+
+#search {
+  flex-basis: 100%;
+  flex-shrink: 10;
+  height: 2rem;
+  border-radius: 10px;
+  border: none;
+  background-color: rgba(128, 128, 128, 0.199);
   }
 
 .logo {
@@ -46,28 +67,12 @@ button {
   font-weight: 675;
 }
 
-#search-form {
-  flex-grow: 1;
-  display: flex;
-  justify-content: center;
-}
-
-#search {
-  flex-basis: 99%;
-  flex-shrink: 10;
-  width: 75vw;
-  height: 2rem;
-  border-radius: 10px;
-  border: none;
-  background-color: rgba(128, 128, 128, 0.199);
-  }
-
 /* Media queries */  
 
 @media (max-width: 770px) {
     
   #search {
-    width: 50vw;
+    width: 50%;
   }
 
   .icons {
@@ -78,7 +83,7 @@ button {
 @media (max-width: 375px) {
     
   #navbar {
-    width: 50vw;
+    width: 50%;
   }
 
   .icons {
@@ -89,7 +94,7 @@ button {
     display: none;
   }
 
-  #search {
-    width: 48vw;
-  }
+ /*  #search {
+    width: 48%;
+  } */
 }
