--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
- body {
+body {
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
   box-sizing: border-box;
-  position: relative;
-  overflow-x: hidden;
+  /* position: relative; */
  }
+
+main {
+  width: 100%;
+  height: auto;
+}
