last version updated

--- a/components/gallery/gallery.css
+++ b/components/gallery/gallery.css
@@ -1,9 +1,9 @@
 #image-grid {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     justify-content: center;
-    background-color: green;
+    gap: 1.5em;
 }
 
 .photo {
