--- a/components/nav/nav.css
+++ b/components/nav/nav.css
@@ -1,3 +1,7 @@
+header {
+  width: 100%;
+}
+
 #navbar {
   width: 100%;
   height: 10vh;
@@ -83,7 +87,7 @@ button {
 @media (max-width: 375px) {
     
   #navbar {
-    width: 50%;
+    width: 100%;
   }
 
   .icons {
@@ -93,8 +97,4 @@ button {
   .create {
     display: none;
   }
-
- /*  #search {
-    width: 48%;
-  } */
 }
