last version updated

--- a/components/gallery/gallery.css
+++ b/components/gallery/gallery.css
@@ -41,9 +41,9 @@
 
 /* Media queries */
 
-@media (max-width: 400px) {
+/* @media (max-width: 400px) {
 
     .photo {
         width: 100%;
     }
-  }
+  } */
